--- a/templates/admin_templates/mmm.html
+++ b/templates/admin_templates/mmm.html
@@ -62,7 +62,7 @@
 					<div class="row">
 						<div class="col-sm-12 text-left menu-1">
 							<ul>
-								<li class="active"><a href="{% url 'home' %}">Home</a></li>
+								<li class="active"><a href="{% url 'home' %}">Home and hence the data are to be transferedg</a></li>
 								<li><a href="{% url 'men' %}">Men</a>
 									<!-- <ul class="dropdown">
 										<li><a href="product-detail.html">Product Detail</a></li>
